--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.22.0
-  cloud_firestore: ^4.9.3
-  firebase_auth: ^4.10.1
+  cloud_firestore: ^4.13.1
+  firebase_auth: ^4.14.0
+  firebase_storage: ^11.5.1
 
 dev_dependencies:
   flutter_test:
